Replace font awesome with phosphor icons

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -9,11 +9,8 @@
     <!-- Mobile friendly viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Font Awesome -->
-    <link href="fontawesome/css/fontawesome.min.css" rel="stylesheet" />
-    <link href="fontawesome/css/brands.min.css" rel="stylesheet" />
-    <link href="fontawesome/css/regular.min.css" rel="stylesheet" />
-    <link href="fontawesome/css/solid.min.css" rel="stylesheet" />
+    <!-- Phosphor Icons -->
+    <link href="phosphor/regular/style.css" rel="stylesheet" />
 
     <!-- Adobe fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/tvj7tlz.css" />
@@ -37,15 +34,15 @@
           <ul>
             <li>
               <address>
-                <i class="fa-regular fa-globe"></i> <code>Remote</code>
+                <i class="ph ph-map-pin"></i> <code>Remote</code>
               </address>
             </li>
             <li>
-              <i class="fa-regular fa-envelope"></i>
+              <i class="ph ph-envelope-simple"></i>
               <a href="mailto:amethyst@n7.gg">amethyst@n7.gg</a>
             </li>
             <li>
-              <i class="fa-regular fa-message"></i>
+              <i class="ph ph-chat-circle-text"></i>
               <a href="tel:+15133415338">+1(513)341-5338</a>
             </li>
           </ul>
@@ -55,15 +52,15 @@
           <h1>Portfolio</h1>
           <ul>
             <li>
-              <i class="fa-brands fa-firefox-browser"></i>
+              <i class="ph ph-link-simple"></i>
               <a href="https://n7.gg">n7.gg</a>
             </li>
             <li>
-              <i class="fa-brands fa-github"></i>
-              <a href="https://github.com/amyreese">github.com/amyreese</a>
+              <i class="ph ph-github-logo"></i>
+              <a href="https://github.com/amyreese">github/amyreese</a>
             </li>
             <li>
-              <i class="fa-solid fa-user-astronaut"></i>
+              <i class="ph ph-planet"></i>
               <a href="https://omnilib.dev">omnilib.dev</a>
             </li>
           </ul>
@@ -96,7 +93,7 @@
         <section class="link">
           <ul>
             <li>
-              <i class="fa-regular fa-file"></i>
+              <i class="ph ph-link-simple"></i>
               <a href="https://n7.gg/resume">n7.gg/resume</a>
             </li>
           </ul>
@@ -110,7 +107,7 @@
           <div>
             <time>present<br />|<br />2012</time>
             <h2>Meta</h2>
-            <address><i class="fa-regular fa-location-dot"></i> Remote</address>
+            <address><i class="ph ph-map-pin"></i> Remote</address>
             <h3>Production Engineer</h3>
             <p>Python Language Foundation</p>
             <ul>
@@ -135,13 +132,15 @@
             <p>Everstore, photo/video storage infra</p>
             <ul>
               <li>
-                Built automation and monitoring systems to assess storage
-                servers and data replication and integrity across data centers.
+                Built high performance automation and remote monitoring systems
+                to assess storage servers, data replication factors, and data
+                integrity across regions.
               </li>
               <li>
                 Migrated legacy systems from Python 2.7 to Python 3.6, seeing
                 significant performance and memory wins. Worked with partner
-                teams to assist in Python version upgrades.
+                teams to assist in automation and validation of major Python
+                version upgrades.
               </li>
             </ul>
           </div>
@@ -150,9 +149,7 @@
             <time>2012<br />|<br />2011</time>
             <h2>BioWare, Electronic Arts</h2>
             <h3>Software Engineer II</h3>
-            <address>
-              <i class="fa-regular fa-location-dot"></i> Redwood Shores, CA
-            </address>
+            <address><i class="ph ph-map-pin"></i> Redwood Shores, CA</address>
             <p>Devops, BioWare SF</p>
             <ul>
               <li>
@@ -167,9 +164,7 @@
             <time>2011<br />|<br />2010</time>
             <h2>CBTS, General Electric</h2>
             <h3>Software Engineer</h3>
-            <address>
-              <i class="fa-regular fa-location-dot"></i> Cincinnati, OH
-            </address>
+            <address><i class="ph ph-map-pin"></i> Cincinnati, OH</address>
             <ul>
               <li>
                 Built custom monitoring and analysis tools for network security
@@ -187,9 +182,7 @@
             <time>2009<br />|<br />2006</time>
             <h2>Redcom Laboratories, Inc.</h2>
             <h3>Software Engineer</h3>
-            <address>
-              <i class="fa-regular fa-location-dot"></i> Victor, NY
-            </address>
+            <address><i class="ph ph-map-pin"></i> Victor, NY</address>
             <ul>
               <li>
                 Worked with open source bug tracker to build and integrate major
@@ -213,15 +206,18 @@
               <li>
                 Foundational libraries and tools for Python, including CLI tools
                 and VSCode extensions. Top packages on PyPI include
-                <code>aioitertools</code>, <code>aiosqlite</code>,
-                <code>stdlibs</code>, and <code>µfmt</code>
+                <code>aioitertools</code>, <code>aiosqlite</code>, and
+                <code>stdlibs</code>.
               </li>
             </ul>
           </div>
 
           <div>
             <h2>unittest-ft</h2>
-            <p>Test and validate projects with free-threaded NoGIL Python</p>
+            <p>
+              Run tests in parallel and validate projects with free-threaded
+              NoGIL Python.
+            </p>
           </div>
         </section>
 
@@ -231,9 +227,7 @@
           <div>
             <time>2009</time>
             <h2>B.S. in Software Engineering</h2>
-            <address>
-              <i class="fa-regular fa-location-dot"></i> Rochester, NY
-            </address>
+            <address><i class="ph ph-map-pin"></i> Rochester, NY</address>
             <p>Rochester Institute of Technology</p>
           </div>
         </section>
