Retitle page and final PDF

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Amethyst Reese - Résumé</title>
+    <title>Amethyst Reese</title>
 
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="resume.css" />
