--- a/resume/resume.html
+++ b/resume/resume.html
@@ -33,9 +33,7 @@
           <h1>Contact</h1>
           <ul>
             <li>
-              <address>
-                <i class="ph ph-map-pin"></i> <code>Remote</code>
-              </address>
+              <address><i class="ph ph-map-pin"></i> US, Remote</address>
             </li>
             <li>
               <i class="ph ph-envelope-simple"></i>
@@ -107,8 +105,8 @@
           <div>
             <time>present<br />|<br />2012</time>
             <h2>Meta</h2>
-            <address><i class="ph ph-map-pin"></i> Remote</address>
-            <h3>Production Engineer</h3>
+            <address><i class="ph ph-map-pin"></i> Remote (CA)</address>
+            <h3>Senior Production Engineer</h3>
             <p>Python Language Foundation</p>
             <ul>
               <li>
@@ -117,9 +115,10 @@
                 build systems.
               </li>
               <li>
-                Built and maintained developer tools, including formatters and
-                linters. Worked with linting platform teams to integrate tools
-                with VSCode, LSP, CI, and code health dashboards. Open sourced
+                Built and maintained developer tools, including formatters,
+                linters and dependency management. Worked with partner teams to
+                integrate tools with VSCode, LSP, CI, and code health
+                dashboards. Open sourced
                 <a href="https://github.com/Instagram/Fixit">Fixit 2.0</a> and
                 <a href="https://github.com/Facebook/usort">µsort</a>.
               </li>
@@ -185,8 +184,8 @@
             <address><i class="ph ph-map-pin"></i> Victor, NY</address>
             <ul>
               <li>
-                Worked with open source bug tracker to build and integrate major
-                features.
+                Contributed major features and plugins to open source
+                <a href="https://mantisbt.org">Mantis BT</a> project.
               </li>
               <li>
                 Maintained and overhauled custom internal tools and source
